<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.presentation.ui.MainActivity">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <TextView
            style="@style/HomeHeaderLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/LoginLabel"
            style="@style/HomeTextEditHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/EmailTextEdit"
            android:text="@string/EmailLabel" />

        <EditText
            android:autofillHints="emailAddress"
            android:id="@+id/EmailTextEdit"
            style="@style/HomeTextEdit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_48dp"
            android:text="@string/EmailExample"
            android:inputType="textEmailAddress"
            />

        <TextView
            android:id="@+id/PasswordLabel"
            style="@style/HomeTextEditHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/PasswordTextEdit"
            android:text="@string/PasswordLabel"
            android:textSize="@dimen/_18sp" />

        <EditText
            android:autofillHints="password"
            android:id="@+id/PasswordTextEdit"
            style="@style/HomeTextEdit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_48dp"
            android:text="@string/PasswordExample"
            android:inputType="textPassword"
            />
        
        <Button
            android:id="@+id/LoginBtn"
            style="@style/HomeLoginBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/LoginBtnText"
            android:onClick="onButtonClick"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>